# web-csv-toolbox

./: .gitignore  .lintstagedrc.js  .lintstagedrc.yaml  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  GPU_DEVICE_SELECTION_API.md  LICENSE  README.md  SECURITY.md  WEBGPU_ENGINE_INTEGRATION.md  WEBGPU_IMPLEMENTATION.md  benchmark-browser.html  benchmark-opfs.html  benchmark-two-pass.html  biome.json  codecov.yml  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.ts  test-abort.mjs  test-sync-node.mjs  test-worker.mjs  tsconfig.base.json  tsconfig.build.json  tsconfig.json  tsconfig.src.json  tsconfig.test.json  typedoc.json  vite.config.ts  vite.config.worker-bundle.ts  vitest.config.ts  vitest.workspace.ts  workgroup-size-test.html
src/wasm/: Cargo.toml  Cargo.toml.d.ts  WasmInstance.lite.node.test.ts  WasmInstance.lite.node.ts  WasmInstance.lite.test.ts  WasmInstance.lite.ts  WasmInstance.main.node.ts  WasmInstance.main.test.ts  WasmInstance.main.ts  WasmInstance.slim.node.test.ts  WasmInstance.slim.node.ts  WasmInstance.slim.test.ts  WasmInstance.slim.ts  WasmInstance.ts  WasmInstanceSlim.node.test.ts  loadWASM.ts  shim.ts  web-csv-toolbox-wasm.d.ts  web_csv_toolbox_wasm.d.ts  web_csv_toolbox_wasm_init.d.ts
src/wasm/loaders/: loadWASM.node.test.ts  loadWASM.node.ts  loadWASM.web.test.ts  loadWASM.web.ts  loadWASMSync.node.test.ts  loadWASMSync.node.ts  loadWASMSync.slim.ts  loadWASMSync.ts  loadWASMSync.web.test.ts  loadWASMSync.web.ts  loadWasm.node.test.ts  loadWasm.node.ts  loadWasm.web.test.ts  loadWasm.web.ts  loadWasmSync.node.test.ts  loadWasmSync.node.ts  loadWasmSync.slim.ts  loadWasmSync.web.test.ts  loadWasmSync.web.ts  wasmState.test.ts  wasmState.ts
src/wasm/src/: lib.rs
web-csv-toolbox-wasm/: .gitignore  Cargo.toml  README.md  clippy.toml  package.json  web_csv_toolbox_wasm.d.ts  web_csv_toolbox_wasm.js  web_csv_toolbox_wasm_bg.wasm  web_csv_toolbox_wasm_bg.wasm.d.ts
web-csv-toolbox-wasm/benches/: csv_parsing.rs
web-csv-toolbox-wasm/pkg/: web_csv_toolbox_wasm.d.ts  web_csv_toolbox_wasm.js  web_csv_toolbox_wasm_bg.wasm  web_csv_toolbox_wasm_bg.wasm.d.ts
web-csv-toolbox-wasm/proptest-regressions/: lib.txt
web-csv-toolbox-wasm/src/: assembler.rs  csv_json.rs  error.rs  flat_result.rs  lexer.rs  lib.rs  parser.rs  parser_optimized.rs
web-csv-toolbox-wasm/src/parser/: mod.rs  parse.rs  scan.rs  security_tests.rs
web-csv-toolbox-wasm/src/simd/: mod.rs  parser.rs  scanner.rs
web-csv-toolbox-wasm/src/tests/: basic.rs  common.rs  (+4 more)
web-csv-toolbox-wasm/tests/: node.rs  web.rs
(+1360 files in other folders)
