[package]
name = "web-csv-toolbox-wasm"
version = "0.1.0"
authors = ["Yuki Yamazaki <yuki@kamiazya.tech>"]
description = "A CSV Toolbox by WebAssembly."
license = "MIT"
repository = "https://github.com/kamiazya/web-csv-toolbox/"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ['console'] }
