[package]
name = "web-csv-toolbox-wasm"
version = "0.1.0"
authors = ["Yuki Yamazaki <yuki@kamiazya.tech>"]
description = "A CSV Toolbox by WebAssembly."
license = "MIT"
repository = "https://github.com/kamiazya/web-csv-toolbox/"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["console"] }
js-sys = "0.3"

[dev-dependencies]
criterion = "0.5"
wasm-bindgen-test = "0.3"
proptest = "1.5"

[[bench]]
name = "csv_parsing"
harness = false

[profile.bench]
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
# SIMD is enabled via RUSTFLAGS="-C target-feature=+simd128" at build time

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-simd"]
