[package]
name = "web-csv-toolbox-wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ['console'] }

[build-dependencies]
compiler_builtins = "0.1.106"
cxx-build = "1.0"
wasm-opt = "0.116.0"
